--- a/application.yml
+++ b/application.yml
@@ -2,3 +2,11 @@
 spring:
   application:
        name: 
+
+eureka:
+   instance:
+      prefer-ip-address: true
+   client:
+      fetch-registry: true
+      service-url:
+        defaultZone: http://localhost:8761/eureka
